...
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView_meeting_object_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardView_title_general_height"
            android:layout_marginTop="@dimen/cardView_meeting_object_container_marginTop"
            android:layout_marginRight="@dimen/general_cardView_title_marginLeftAndRight"
            android:layout_marginLeft="@dimen/general_cardView_title_marginLeftAndRight"
            android:layout_marginBottom="@dimen/cardView_meeting_object_container_marginBottom"


            >


            <EditText
                android:id="@+id/editText_meeting_object"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_look_like"
                android:hint="@string/meeting_object"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"

                android:nextFocusDown="@id/clock_start_time_button"
                android:textAlignment="center"
                android:textColorHint="@color/my_red"
                android:textSize="@dimen/textView_meeting_object_size" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
...

                android:textStyle="bold" />
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/CardView_time_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardView_time_container_height"
            android:layout_marginLeft="@dimen/cardViews_general_margin_left_right"
            android:layout_marginRight="@dimen/cardViews_general_margin_left_right"

            >
...
                android:layout_gravity="start|bottom"
                android:layout_marginBottom="@dimen/icon_meeting_end_time_marginBottom"
                app:srcCompat="@drawable/ic_action_clock"
                android:tint="@color/colorAccent"
                 />
            <TextView
                android:id="@+id/meeting_end_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginBottom="@dimen/textView_meeting_end_time_marginBottom"
                android:layout_marginStart="@dimen/textView_meeting_end_time_marginStart"
                android:textSize="@dimen/textView_clock_size"
...
                android:layout_width="117dp"
                android:layout_height="32dp"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/button_look_like"
                android:nextFocusDown="@+id/recycler_meeting_room"
                android:padding="@dimen/button_validation_padding"
                android:paddingStart="@dimen/button_clock_end_time_paddingStart"
                android:paddingEnd="@dimen/button_clock_end_time_paddingEnd"
                android:text="@string/change_end_time"
                android:textSize="@dimen/general_button_text_size" />

...
                android:gravity="center"

                />

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/cardView_meeting_room_recycler_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardView_recycler_attendees_container_height"
            android:layout_marginStart="@dimen/cardView_recycler_attendees_container_margin_left"
            android:layout_marginEnd="@dimen/cardView_recycler_attendees_container_margin_right">

                <android.support.v7.widget.RecyclerView
...

                    />


        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/cardView_add_attendees_title_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardView_title_general_height"
            android:layout_marginTop="@dimen/cardView_add_attendees_title_container_marginTop"
            android:layout_marginRight="@dimen/cardViews_general_margin_left_right"
            android:layout_marginLeft="@dimen/cardViews_general_margin_left_right"
            android:layout_marginBottom="@dimen/cardView_add_attendees_title_container_marginBottom"
            >
            <TextView
                android:id="@+id/textView_attendee_title_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_attendees_text_card"
                android:textSize="@dimen/general_cardView_title_text_size"
                android:textStyle="bold"
                android:textColor="@color/my_black"
...

                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView_input_attendees_mailAddress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardView_title_general_height"
            android:layout_marginRight="@dimen/cardViews_general_margin_left_right"
            android:layout_marginLeft="@dimen/cardViews_general_margin_left_right"
            android:layout_marginBottom="@dimen/cardView_input_attendees_mailAddress_marginBottom"
            >
...
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <EditText

                    android:id="@+id/editText_attendees_added_name_input_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:hint="@string/attendee_mail_address"
                    android:textColorHint="@color/my_red"
                    android:textSize="@dimen/editText_attendees_added_name_size"
                    android:fitsSystemWindows="true"
...
                    android:ellipsize="end"

                    />
            </LinearLayout>
            <ImageView
                android:contentDescription="@string/validate"
                android:id="@+id/imageView_add_attendee_in_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                app:srcCompat="@drawable/ic_action_tick"
                android:visibility="gone"
                />
...
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_attendees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical"
                android:isScrollContainer="true"
                android:nextFocusDown="@+id/button_validation"/>


        </android.support.v7.widget.CardView>
        <Button
            android:id="@+id/button_validation"
            android:layout_width="match_parent"
...
