<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_item_list_meetings"
    android:name=".controller.meetings_list.MeetingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/fragment_item_list_attendees_marginStart"
    android:layout_marginEnd="@dimen/fragment_item_list_attendees_marginEnd"
    app:layoutManager="LinearLayoutManager"
    tools:context=".controller.fragments.MeetingsFragment"
    tools:listitem="@layout/fragment_meetings" />
